explicación del código planificador de Cultivos (Listas y Funciones)

--- a/Semana_4_y_5.ipynb
+++ b/Semana_4_y_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrd24zUdIZuv0X8e6ailaI",
+      "authorship_tag": "ABX9TyPx0Awf76aGe7s3Y134/kyH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,6 +131,170 @@
       "metadata": {
         "id": "hH2rBi8r1fl_"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7dc3f571"
+      },
+      "source": [
+        "Aquí te presento la explicación de cada fragmento del código del planificador de cultivos:\n",
+        "\n",
+        "1.  **Creación de la lista de cultivos:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "985deaa2"
+      },
+      "source": [
+        "    def recomendar_cultivos(lista_cultivos, mes_actual):\n",
+        "        \"\"\"\n",
+        "        Recomienda cultivos adecuados para sembrar en un mes dado.\n",
+        "\n",
+        "        Args:\n",
+        "            lista_cultivos: Lista de diccionarios con información de los cultivos.\n",
+        "            mes_actual: Nombre del mes para el que se buscan recomendaciones.\n",
+        "\n",
+        "        Returns:\n",
+        "            Una lista con los nombres de los cultivos recomendados para el mes dado.\n",
+        "        \"\"\"\n",
+        "        recomendados = []\n",
+        "        # ... (código dentro de la función) ...\n",
+        "        return recomendados"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bae561f1"
+      },
+      "source": [
+        "    for cultivo in lista_cultivos:\n",
+        "        # ... (código dentro del bucle) ..."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39d0cf79"
+      },
+      "source": [
+        "    if cultivo[\"mes_siembra\"].lower() == mes_actual.lower():\n",
+        "        # ... (código dentro del if) ..."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ac40a07"
+      },
+      "source": [
+        "    recomendados.append(cultivo[\"nombre\"])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f5b66429"
+      },
+      "source": [
+        "    return recomendados"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6c1a5f46"
+      },
+      "source": [
+        "    mes_ingresado = input(\"Introduce el nombre del mes actual (ej. Enero): \")\n",
+        "\n",
+        "    recomendaciones = recomendar_cultivos(cultivos, mes_ingresado)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "49416bc8"
+      },
+      "source": [
+        "    if recomendaciones:\n",
+        "        print(f\"\\nCultivos recomendados para sembrar en {mes_ingresado}:\")\n",
+        "        for cultivo_recomendado in recomendaciones:\n",
+        "            print(f\"- {cultivo_recomendado}\")\n",
+        "    else:\n",
+        "        print(f\"\\nNo hay cultivos recomendados para sembrar en {mes_ingresado} en nuestra base de datos.\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "12974b77"
+      },
+      "source": [
+        "```python\n",
+        "# 1. Crear una lista donde cada elemento sea un diccionario con información de cultivos.\n",
+        "cultivos = [\n",
+        "    {\"nombre\": \"Maíz\", \"mes_siembra\": \"Abril\", \"riego\": \"Alto\"},\n",
+        "    {\"nombre\": \"Trigo\", \"mes_siembra\": \"Octubre\", \"riego\": \"Medio\"},\n",
+        "    {\"nombre\": \"Girasol\", \"mes_siembra\": \"Marzo\", \"riego\": \"Medio\"},\n",
+        "    {\"nombre\": \"Soja\", \"mes_siembra\": \"Noviembre\", \"riego\": \"Alto\"},\n",
+        "    {\"nombre\": \"Arroz\", \"mes_siembra\": \"Mayo\", \"riego\": \"Muy Alto\"},\n",
+        "    {\"nombre\": \"Cebada\", \"mes_siembra\": \"Septiembre\", \"riego\": \"Medio\"},\n",
+        "    {\"nombre\": \"Algodón\", \"mes_siembra\": \"Mayo\", \"riego\": \"Alto\"},\n",
+        "]\n",
+        "\n",
+        "# 2. Crear una función llamada recomendar_cultivos.\n",
+        "def recomendar_cultivos(lista_cultivos, mes_actual):\n",
+        "    \"\"\"\n",
+        "    Recomienda cultivos adecuados para sembrar en un mes dado.\n",
+        "\n",
+        "    Args:\n",
+        "        lista_cultivos: Lista de diccionarios con información de los cultivos.\n",
+        "        mes_actual: Nombre del mes para el que se buscan recomendaciones.\n",
+        "\n",
+        "    Returns:\n",
+        "        Una lista con los nombres de los cultivos recomendados para el mes dado.\n",
+        "    \"\"\"\n",
+        "    recomendados = []\n",
+        "    # 3. Usar un bucle for para recorrer la lista de cultivos.\n",
+        "    for cultivo in lista_cultivos:\n",
+        "        # 4. Usar un if para comprobar si el mes_siembra coincide.\n",
+        "        if cultivo[\"mes_siembra\"].lower() == mes_actual.lower():\n",
+        "            # 5. Si coinciden, añadir el nombre del cultivo a la lista de recomendados.\n",
+        "            recomendados.append(cultivo[\"nombre\"])\n",
+        "    # 6. La función debe devolver la lista de cultivos recomendados.\n",
+        "    return recomendados\n",
+        "\n",
+        "# 7. En el programa principal, pedir al usuario el mes y llamar a la función.\n",
+        "mes_ingresado = input(\"Introduce el nombre del mes actual (ej. Enero): \")\n",
+        "\n",
+        "recomendaciones = recomendar_cultivos(cultivos, mes_ingresado)\n",
+        "\n",
+        "# Imprimir las recomendaciones.\n",
+        "if recomendaciones:\n",
+        "    print(f\"\\nCultivos recomendados para sembrar en {mes_ingresado}:\")\n",
+        "    for cultivo_recomendado in recomendaciones:\n",
+        "        print(f\"- {cultivo_recomendado}\")\n",
+        "else:\n",
+        "    print(f\"\\nNo hay cultivos recomendados para sembrar en {mes_ingresado} en nuestra base de datos.\")"
+      ]
     },
     {
       "cell_type": "code",
