explicación del CODIGO planificador

--- a/Semana_4_y_5.ipynb
+++ b/Semana_4_y_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPx0Awf76aGe7s3Y134/kyH",
+      "authorship_tag": "ABX9TyNMTpNcHu6shqadcUqorYBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,10 +367,281 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " # Situación 2: Función para Validar Parámetros de Calidad\n",
+        "\n",
+        " Una planta recibe lotes de fruta y debe\n",
+        " validar si cumplen con los parámetros de pH y grados Brix para ser aceptados. Crearás una función que\n",
+        " centralice esta lógica de validación.\n",
+        " • Paso a Paso del Código (Guía para el Notebook)\n",
+        " 1. # Definir una función 'validar_lote' que tome dos parámetros: 'ph' y 'brix'.\n",
+        " 2. # Dentro de la función, usar una estructura 'if' para verificar si el pH está\n",
+        " entre 3.5 y 4.5 Y si los grados Brix son mayores a 12.\n",
+        " 3. # Si ambas condiciones se cumplen, la función debe devolver el valor booleano\n",
+        " True.\n",
+        " 4. # De lo contrario (else), la función debe devolver el valor booleano False.\n",
+        " 5. # En el programa principal, pedir al usuario el pH y los grados Brix del lote\n",
+        " actual.\n",
+        " 6. # Llamar a la función 'validar_lote' con los datos ingresados y guardar el\n",
+        " resultado (True/False) en una variable.\n",
+        " 7. # Usar un 'if' en el programa principal para comprobar el valor de esa variable.\n",
+        " 8. # Si la variable es True, imprimir \"Lote APROBADO\". Si es False, imprimir \"Lote\n",
+        " RECHAZADO\"."
+      ],
+      "metadata": {
+        "id": "Q-eLp0N66DVs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d1a6491a",
+        "outputId": "dea5459d-7d60-4003-89b5-741f80030eed"
+      },
+      "source": [
+        "# 1. Definir una función 'validar_lote' que tome dos parámetros: 'ph' y 'brix'.\n",
+        "def validar_lote(ph, brix):\n",
+        "    \"\"\"\n",
+        "    Valida si un lote de fruta cumple con los parámetros de calidad.\n",
+        "\n",
+        "    Args:\n",
+        "        ph: Nivel de pH del lote.\n",
+        "        brix: Grados Brix del lote.\n",
+        "\n",
+        "    Returns:\n",
+        "        True si el lote es aprobado, False en caso contrario.\n",
+        "    \"\"\"\n",
+        "    # 2. Dentro de la función, usar una estructura 'if' para verificar si el pH está\n",
+        "    #    entre 3.5 y 4.5 Y si los grados Brix son mayores a 12.\n",
+        "    if 3.5 <= ph <= 4.5 and brix > 12:\n",
+        "        # 3. Si ambas condiciones se cumplen, la función debe devolver el valor booleano True.\n",
+        "        return True\n",
+        "    else:\n",
+        "        # 4. De lo contrario (else), la función debe devolver el valor booleano False.\n",
+        "        return False\n",
+        "\n",
+        "# 5. En el programa principal, pedir al usuario el pH y los grados Brix del lote actual.\n",
+        "try:\n",
+        "    ph_ingresado = float(input(\"Introduce el nivel de pH del lote: \"))\n",
+        "    brix_ingresados = float(input(\"Introduce los grados Brix del lote: \"))\n",
+        "\n",
+        "    # 6. Llamar a la función 'validar_lote' con los datos ingresados y guardar el\n",
+        "    #    resultado (True/False) en una variable.\n",
+        "    aprobado = validar_lote(ph_ingresado, brix_ingresados)\n",
+        "\n",
+        "    # 7. Usar un 'if' en el programa principal para comprobar el valor de esa variable.\n",
+        "    # 8. Si la variable es True, imprimir \"Lote APROBADO\". Si es False, imprimir \"Lote RECHAZADO\".\n",
+        "    if aprobado:\n",
+        "        print(\"\\nLote APROBADO\")\n",
+        "    else:\n",
+        "        print(\"\\nLote RECHAZADO\")\n",
+        "\n",
+        "except ValueError:\n",
+        "    print(\"\\nEntrada inválida. Por favor, introduce valores numéricos para pH y Brix.\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce el nivel de pH del lote: 4.2\n",
+            "Introduce los grados Brix del lote: 13\n",
+            "\n",
+            "Lote APROBADO\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f93f5601"
+      },
+      "source": [
+        "## `try` y `except` en Python: Manejo de Errores\n",
+        "\n",
+        "En Python, los bloques `try` y `except` se utilizan para manejar errores que pueden ocurrir durante la ejecución de un programa. Este mecanismo se conoce como manejo de excepciones.\n",
+        "\n",
+        "*   **`try`:** El bloque `try` contiene el código que *podría* generar una excepción (un error). Python intentará ejecutar el código dentro de este bloque.\n",
+        "*   **`except`:** Si ocurre una excepción en el bloque `try`, Python detiene la ejecución del código en el `try` y busca un bloque `except` que pueda manejar ese tipo específico de excepción. El código dentro del bloque `except` se ejecutará solo si ocurre la excepción correspondiente en el bloque `try`.\n",
+        "\n",
+        "**¿Por qué son útiles?**\n",
+        "\n",
+        "*   **Evitar que el programa se detenga abruptamente:** Cuando ocurre un error no manejado, el programa se \"crashea\" y deja de funcionar. `try...except` permite \"capturar\" esos errores y ejecutar código alternativo para que el programa pueda continuar o salir de manera controlada.\n",
+        "*   **Manejar situaciones inesperadas:** Puedes anticipar ciertos tipos de errores (como que el usuario ingrese texto cuando se espera un número, un archivo que no existe, etc.) y proporcionar una respuesta adecuada en lugar de que el programa falle.\n",
+        "*   **Facilitar la depuración:** Al manejar excepciones, puedes imprimir mensajes de error útiles o registrar información para entender qué salió mal.\n",
+        "\n",
+        "**Ejemplo simple:**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5483501a"
+      },
+      "source": [
+        "Aquí te presento la explicación de cada fragmento del código de validación de lotes de fruta:\n",
+        "\n",
+        "1.  **Definición de la función `validar_lote`:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19cd0a4d"
+      },
+      "source": [
+        "# 1. Definir una función 'validar_lote' que tome dos parámetros: 'ph' y 'brix'.\n",
+        "def validar_lote(ph, brix):\n",
+        "    \"\"\"\n",
+        "    Valida si un lote de fruta cumple con los parámetros de calidad.\n",
+        "\n",
+        "    Args:\n",
+        "        ph: Nivel de pH del lote.\n",
+        "        brix: Grados Brix del lote.\n",
+        "\n",
+        "    Returns:\n",
+        "        True si el lote es aprobado, False en caso contrario.\n",
+        "    \"\"\"\n",
+        "    # ... (código dentro de la función) ..."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "faa35458"
+      },
+      "source": [
+        "    Esta línea define una función llamada `validar_lote` que acepta dos argumentos: `ph` y `brix`. La cadena de texto multilinea (`\"\"\"...\"\"\"`) es un \"docstring\" que explica brevemente qué hace la función, sus argumentos y qué devuelve.\n",
+        "\n",
+        "2.  **Verificación de las condiciones de pH y Brix:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0b4b304d"
+      },
+      "source": [
+        "    if 3.5 <= ph <= 4.5 and brix > 12:\n",
+        "        # 3. Si ambas condiciones se cumplen, la función debe devolver el valor booleano True.\n",
+        "        return True\n",
+        "    else:\n",
+        "        # 4. De lo contrario (else), la función debe devolver el valor booleano False.\n",
+        "        return False"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "34f297fb"
+      },
+      "source": [
+        "    Este bloque `if` verifica si el valor de `ph` está entre 3.5 y 4.5 (inclusive) *y* si el valor de `brix` es mayor que 12.\n",
+        "    *   Si ambas condiciones son verdaderas (`True`), la función devuelve `True`, indicando que el lote es aprobado.\n",
+        "    *   Si alguna de las condiciones es falsa (`False`), el `else` se ejecuta y la función devuelve `False`, indicando que el lote es rechazado.\n",
+        "\n",
+        "3.  **Solicitud de entrada al usuario y manejo de errores:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "44ee850e"
+      },
+      "source": [
+        "# 5. En el programa principal, pedir al usuario el pH y los grados Brix del lote actual.\n",
+        "try:\n",
+        "    ph_ingresado = float(input(\"Introduce el nivel de pH del lote: \"))\n",
+        "    brix_ingresados = float(input(\"Introduce los grados Brix del lote: \"))\n",
+        "\n",
+        "    # ... (código para llamar a la función y imprimir el resultado) ...\n",
+        "\n",
+        "except ValueError:\n",
+        "    print(\"\\nEntrada inválida. Por favor, introduce valores numéricos para pH y Brix.\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "92faf13f"
+      },
+      "source": [
+        "    Este bloque solicita al usuario que introduzca el pH y los grados Brix del lote.\n",
+        "    *   `input()` lee la entrada del usuario como texto.\n",
+        "    *   `float()` intenta convertir ese texto a un número decimal.\n",
+        "    *   El bloque `try...except ValueError` maneja el caso en que el usuario ingrese algo que no sea un número, imprimiendo un mensaje de error.\n",
+        "\n",
+        "4.  **Llamada a la función y almacenamiento del resultado:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c3bc5007"
+      },
+      "source": [
+        "    # 6. Llamar a la función 'validar_lote' con los datos ingresados y guardar el\n",
+        "    #    resultado (True/False) en una variable.\n",
+        "    aprobado = validar_lote(ph_ingresado, brix_ingresados)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "04a325e4"
+      },
+      "source": [
+        "    Aquí se llama a la función `validar_lote` pasando los valores ingresados por el usuario (`ph_ingresado` y `brix_ingresados`). El valor booleano que devuelve la función (`True` o `False`) se almacena en la variable `aprobado`.\n",
+        "\n",
+        "5.  **Imprimir el resultado de la validación:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fdbc04f"
+      },
+      "source": [
+        "    # 7. Usar un 'if' en el programa principal para comprobar el valor de esa variable.\n",
+        "    # 8. Si la variable es True, imprimir \"Lote APROBADO\". Si es False, imprimir \"Lote RECHAZADO\".\n",
+        "    if aprobado:\n",
+        "        print(\"\\nLote APROBADO\")\n",
+        "    else:\n",
+        "        print(\"\\nLote RECHAZADO\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3fa60cb6"
+      },
+      "source": [
+        "    Finalmente, este bloque `if` verifica el valor de la variable `aprobado`.\n",
+        "    *   Si `aprobado` es `True`, imprime \"Lote APROBADO\".\n",
+        "    *   Si `aprobado` es `False`, imprime \"Lote RECHAZADO\"."
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YmUcGiOz2Ay_"
+        "id": "xpESy7Iu66xa"
       },
       "execution_count": null,
       "outputs": []
