codigo que pide indefinidamente el ingreso de los datos

--- a/Semana_4_y_5.ipynb
+++ b/Semana_4_y_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMTpNcHu6shqadcUqorYBw",
+      "authorship_tag": "ABX9TyOI8Qp8k9ibEFPqsYQ8VlEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -638,10 +638,117 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Ingeniería Agroindustrial Situación 1: Ficha Técnica de un Producto\n",
+        "Se necesita un programa para almacenar y mostrar la\n",
+        " información clave de un producto alimenticio, como su nombre, lote, fecha de vencimiento y porcentaje de\n",
+        " humedad. Un diccionario es perfecto para esto, ya que cada dato tiene una etiqueta clara.\n",
+        "\n",
+        " • Paso a Paso del Código (Guía para el Notebook)\n",
+        " 1. # Crear un diccionario vacío llamado 'ficha_producto'.\n",
+        " 2. # Pedir al usuario el nombre del producto y guardarlo en el diccionario con la\n",
+        " clave 'nombre'.\n",
+        " 3. # Pedir el número de lote y guardarlo con la clave 'lote'.\n",
+        " 4. # Pedir la fecha de vencimiento y guardarla con la clave 'vencimiento'.\n",
+        " 5. # Pedir el porcentaje de humedad y guardarlo con la clave 'humedad'.\n",
+        " 6. # Mostrar un encabezado que diga \"--- Ficha Técnica del Producto---\".\n",
+        " 7. # Imprimir cada uno de los valores del diccionario accediendo a ellos a través\n",
+        " de sus claves (ej. ficha_producto['nombre'])."
+      ],
+      "metadata": {
+        "id": "zhDgDVjO9OwY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xpESy7Iu66xa"
+        "id": "tZOsjl-h9q2g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dd94585a",
+        "outputId": "57080606-7f25-40c4-9b09-5e79ccf4276b"
+      },
+      "source": [
+        "# 1. Crear un diccionario vacío llamado 'ficha_producto'.\n",
+        "# 2-7. Modificar para solicitar datos indefinidamente hasta que el usuario decida finalizar.\n",
+        "\n",
+        "while True:\n",
+        "    ficha_producto = {}\n",
+        "    print(\"\\n--- Ingreso de datos para nueva Ficha Técnica (escribe 'fin' en el nombre para terminar) ---\")\n",
+        "\n",
+        "    nombre_producto = input(\"Introduce el nombre del producto: \")\n",
+        "    if nombre_producto.lower() == 'fin':\n",
+        "        break\n",
+        "    ficha_producto['nombre'] = nombre_producto\n",
+        "\n",
+        "    numero_lote = input(\"Introduce el número de lote: \")\n",
+        "    ficha_producto['lote'] = numero_lote\n",
+        "\n",
+        "    fecha_vencimiento = input(\"Introduce la fecha de vencimiento (DD/MM/AAAA): \")\n",
+        "    ficha_producto['vencimiento'] = fecha_vencimiento\n",
+        "\n",
+        "    porcentaje_humedad = input(\"Introduce el porcentaje de humedad (%): \")\n",
+        "    ficha_producto['humedad'] = porcentaje_humedad\n",
+        "\n",
+        "    # Mostrar la ficha técnica del producto ingresado\n",
+        "    print(\"\\n--- Ficha Técnica del Producto---\")\n",
+        "    print(f\"Nombre: {ficha_producto['nombre']}\")\n",
+        "    print(f\"Lote: {ficha_producto['lote']}\")\n",
+        "    print(f\"Fecha de vencimiento: {ficha_producto['vencimiento']}\")\n",
+        "    print(f\"Humedad: {ficha_producto['humedad']}\")"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "--- Ingreso de datos para nueva Ficha Técnica (escribe 'fin' en el nombre para terminar) ---\n",
+            "Introduce el nombre del producto: mango\n",
+            "Introduce el número de lote: 123\n",
+            "Introduce la fecha de vencimiento (DD/MM/AAAA): 17/12/2027\n",
+            "Introduce el porcentaje de humedad (%): 67\n",
+            "\n",
+            "--- Ficha Técnica del Producto---\n",
+            "Nombre: mango\n",
+            "Lote: 123\n",
+            "Fecha de vencimiento: 17/12/2027\n",
+            "Humedad: 67\n",
+            "\n",
+            "--- Ingreso de datos para nueva Ficha Técnica (escribe 'fin' en el nombre para terminar) ---\n",
+            "Introduce el nombre del producto: yuca\n",
+            "Introduce el número de lote: 56\n",
+            "Introduce la fecha de vencimiento (DD/MM/AAAA): 20/08/2026\n",
+            "Introduce el porcentaje de humedad (%): 80\n",
+            "\n",
+            "--- Ficha Técnica del Producto---\n",
+            "Nombre: yuca\n",
+            "Lote: 56\n",
+            "Fecha de vencimiento: 20/08/2026\n",
+            "Humedad: 80\n",
+            "\n",
+            "--- Ingreso de datos para nueva Ficha Técnica (escribe 'fin' en el nombre para terminar) ---\n",
+            "Introduce el nombre del producto: fin\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QyNvHooZ_r8X"
       },
       "execution_count": null,
       "outputs": []
